--- a/LEARNING_EF_CODE_FIRST/App.config
+++ b/LEARNING_EF_CODE_FIRST/App.config
@@ -5,14 +5,16 @@
 		<section
 			name="entityFramework"
 			type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-			requirePermission="false"/>
+			requirePermission="false"
+			/>
 	</configSections>
 
 	<connectionStrings>
 		<add
 			name="DatabaseContext"
 			connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=LEARNING_ENTITY_FRAMEWORK;Data Source=."
-			providerName="System.Data.SqlClient"/>
+			providerName="System.Data.SqlClient"
+			/>
 	</connectionStrings>
 
 	<startup>
